# learning-dbt-snowflake

./: README.md  pyproject.toml
dbt_airbnb_project/: dbt_project.yml
dbt_airbnb_project/analyses/: full_moon_no_sleep.sql
dbt_airbnb_project/macros/: no_nulls_in_columns.sql  positive_value.sql
dbt_airbnb_project/models/: schema.yml  sources.yml
dbt_airbnb_project/models/dim/: dim_hosts_cleansed.sql  dim_listings_cleansed.sql  dim_listings_w_hosts.sql
dbt_airbnb_project/models/fct/: fct_reviews.sql
dbt_airbnb_project/models/mart/: mart_fullmoon_reviews.sql
dbt_airbnb_project/models/src/: src_hosts.sql  src_listings.sql  src_reviews.sql
dbt_airbnb_project/snapshots/: scd_raw_listings.sql
dbt_airbnb_project/tests/: assert_dim_listings_cleansed_has_minimum_nights_greater_than_zero.sql  assert_reviews_are_created_after_listing.sql  asset_dim_listings_is_not_nulls.sql
